# brand-detector

./: .gitignore  LINUX_SETUP.md  README.md  app.py  main.py  package.json  pyproject.toml  requirements.txt  start.bat  start.sh  test_gpu.py
api/: routes.py
models/: config.py  detection.py
services/: detection_service.py  image_service.py  model_service.py
